{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 22,
  "lineage": "a0a64a60-aa9c-b3f8-35c2-1e9034cdbcf1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:471112755631:instance/i-014b25f3e098c3bbe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014b25f3e098c3bbe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee0076743b3a8114",
            "private_dns": "ip-10-0-1-96.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.96",
            "public_ip": "54.198.62.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a7694521f1395f52",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-015be468147373352"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09485aa463c7361fb",
            "tags": {
              "Name": "Ever Instance Test"
            },
            "tags_all": {
              "Name": "Ever Instance Test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015be468147373352"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_instance.pc_db_01",
            "aws_db_subnet_group.pc_api_rds_sg",
            "aws_security_group.rds_db_sg",
            "aws_security_group.web_server_sg",
            "aws_subnet.pc_api_private_subnet1",
            "aws_subnet.pc_api_private_subnet2",
            "aws_subnet.pc_api_public_subnet",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pc_api_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112755631:internet-gateway/igw-0a45667e30373ec23",
            "id": "igw-0a45667e30373ec23",
            "owner_id": "471112755631",
            "tags": {
              "Name": "Internet Gateway for public subnet"
            },
            "tags_all": {
              "Name": "Internet Gateway for public subnet"
            },
            "vpc_id": "vpc-08ae93a8a16f343f7"
          },
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pc_api_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a45667e30373ec23",
            "id": "r-rtb-016f5719742fe6fc01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-016f5719742fe6fc0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pc_api_ig",
            "aws_route_table.pc_api_public_route_table",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pc_api_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112755631:route-table/rtb-07a38e8f458348e5d",
            "id": "rtb-07a38e8f458348e5d",
            "owner_id": "471112755631",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Route table for public subnet"
            },
            "tags_all": {
              "Name": "Route table for public subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ae93a8a16f343f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pc_api_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112755631:route-table/rtb-016f5719742fe6fc0",
            "id": "rtb-016f5719742fe6fc0",
            "owner_id": "471112755631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a45667e30373ec23",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route table for public subnet"
            },
            "tags_all": {
              "Name": "Route table for public subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ae93a8a16f343f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pc_api_private_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f65862e6e056531b",
            "route_table_id": "rtb-07a38e8f458348e5d",
            "subnet_id": "subnet-01c4221d92aa7e0e0"
          },
          "dependencies": [
            "aws_route_table.pc_api_private_route_table",
            "aws_subnet.pc_api_private_subnet1",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pc_api_private_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a792d5d535ea41f",
            "route_table_id": "rtb-07a38e8f458348e5d",
            "subnet_id": "subnet-0d05afcfee98a4324"
          },
          "dependencies": [
            "aws_route_table.pc_api_private_route_table",
            "aws_subnet.pc_api_private_subnet2",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pc_api_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099c008b20a6c6e7d",
            "route_table_id": "rtb-016f5719742fe6fc0",
            "subnet_id": "subnet-09485aa463c7361fb"
          },
          "dependencies": [
            "aws_route_table.pc_api_public_route_table",
            "aws_subnet.pc_api_public_subnet",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112755631:security-group/sg-083e87b2173c6d92b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-083e87b2173c6d92b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-015be468147373352"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "pc-api-rds-db-sg",
            "name_prefix": "",
            "owner_id": "471112755631",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ae93a8a16f343f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112755631:security-group/sg-0b2c58d3dda90b89f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b2c58d3dda90b89f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-015be468147373352"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "471112755631",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ae93a8a16f343f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_server_sg",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112755631:security-group/sg-015be468147373352",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015be468147373352",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pc-api-web-server-sg",
            "name_prefix": "",
            "owner_id": "471112755631",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ae93a8a16f343f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pc_api_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112755631:subnet/subnet-01c4221d92aa7e0e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c4221d92aa7e0e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112755631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08ae93a8a16f343f7"
          },
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pc_api_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112755631:subnet/subnet-0d05afcfee98a4324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d05afcfee98a4324",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112755631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08ae93a8a16f343f7"
          },
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pc_api_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112755631:subnet/subnet-09485aa463c7361fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09485aa463c7361fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112755631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08ae93a8a16f343f7"
          },
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_server_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112755631:vpc/vpc-08ae93a8a16f343f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac4ecdbc9838b08a",
            "default_route_table_id": "rtb-059938cbc807fa69d",
            "default_security_group_id": "sg-035aef1738ad6c9ec",
            "dhcp_options_id": "dopt-0e0f4b2b80651739a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ae93a8a16f343f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059938cbc807fa69d",
            "owner_id": "471112755631"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_rds_sgir",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112755631:security-group-rule/sgr-032cfb5373f2aeb16",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-032cfb5373f2aeb16",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-015be468147373352",
            "security_group_id": "sg-083e87b2173c6d92b",
            "security_group_rule_id": "sgr-032cfb5373f2aeb16",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_db_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    }
  ]
}